# mlx90640-gtk

./: Cargo.toml  README.md
src/: camera.rs  example.rs  main.rs
